--- a/Dataframe_Demo.ipynb
+++ b/Dataframe_Demo.ipynb
@@ -27,7 +27,7 @@
     "import json\n",
     "import shelve\n",
     "from HelperClass import InvertedIndex, Token\n",
-    "from helper import tokenizeHtml"
+    "from helper import tokenizeHtml, df_from_dict, dict_from_df, join_df_col"
    ]
   },
   {
@@ -265,24 +265,24 @@
        "Token: us\n",
        "\tDocId: 1, Freq: 2\n",
        "\t\tPos: {10, 13}\n",
-       "\t\tWeights: {'a': {10, 13}, 'nav': {13}, 'header': {13}}\n",
+       "\t\tWeights: {'a': {10, 13}, 'header': {13}, 'nav': {13}}\n",
        "\tDocId: 2, Freq: 2\n",
        "\t\tPos: {10, 13}\n",
-       "\t\tWeights: {'a': {10, 13}, 'nav': {13}, 'header': {13}}\n",
+       "\t\tWeights: {'a': {10, 13}, 'header': {13}, 'nav': {13}}\n",
        "\tDocId: 3, Freq: 2\n",
        "\t\tPos: {10, 13}\n",
-       "\t\tWeights: {'a': {10, 13}, 'nav': {13}, 'header': {13}}\n",
+       "\t\tWeights: {'a': {10, 13}, 'header': {13}, 'nav': {13}}\n",
        "\n",
        "Token: home\n",
        "\tDocId: 1, Freq: 1\n",
        "\t\tPos: {11}\n",
-       "\t\tWeights: {'nav': {11}, 'header': {11}, 'a': {11}}\n",
+       "\t\tWeights: {'header': {11}, 'nav': {11}, 'a': {11}}\n",
        "\tDocId: 2, Freq: 1\n",
        "\t\tPos: {11}\n",
-       "\t\tWeights: {'nav': {11}, 'header': {11}, 'a': {11}}\n",
+       "\t\tWeights: {'header': {11}, 'nav': {11}, 'a': {11}}\n",
        "\tDocId: 3, Freq: 1\n",
        "\t\tPos: {11}\n",
-       "\t\tWeights: {'nav': {11}, 'header': {11}, 'a': {11}}\n",
+       "\t\tWeights: {'header': {11}, 'nav': {11}, 'a': {11}}\n",
        "\tDocId: 4, Freq: 1\n",
        "\t\tPos: {29}\n",
        "\t\tWeights: {'a': {29}}\n",
@@ -308,24 +308,24 @@
        "Token: about\n",
        "\tDocId: 1, Freq: 1\n",
        "\t\tPos: {12}\n",
-       "\t\tWeights: {'nav': {12}, 'header': {12}, 'a': {12}}\n",
+       "\t\tWeights: {'header': {12}, 'nav': {12}, 'a': {12}}\n",
        "\tDocId: 2, Freq: 1\n",
        "\t\tPos: {12}\n",
-       "\t\tWeights: {'nav': {12}, 'header': {12}, 'a': {12}}\n",
+       "\t\tWeights: {'header': {12}, 'nav': {12}, 'a': {12}}\n",
        "\tDocId: 3, Freq: 1\n",
        "\t\tPos: {12}\n",
-       "\t\tWeights: {'nav': {12}, 'header': {12}, 'a': {12}}\n",
+       "\t\tWeights: {'header': {12}, 'nav': {12}, 'a': {12}}\n",
        "\n",
        "Token: event\n",
        "\tDocId: 1, Freq: 3\n",
        "\t\tPos: {139, 60, 14}\n",
-       "\t\tWeights: {'nav': {14}, 'header': {14}, 'a': {14}, 'h4': {60}, 'h2': {139}}\n",
+       "\t\tWeights: {'header': {14}, 'nav': {14}, 'a': {14}, 'h4': {60}, 'h2': {139}}\n",
        "\tDocId: 2, Freq: 3\n",
        "\t\tPos: {139, 60, 14}\n",
-       "\t\tWeights: {'nav': {14}, 'header': {14}, 'a': {14}, 'h4': {60}, 'h2': {139}}\n",
+       "\t\tWeights: {'header': {14}, 'nav': {14}, 'a': {14}, 'h4': {60}, 'h2': {139}}\n",
        "\tDocId: 3, Freq: 3\n",
        "\t\tPos: {139, 60, 14}\n",
-       "\t\tWeights: {'nav': {14}, 'header': {14}, 'a': {14}, 'h4': {60}, 'h2': {139}}\n",
+       "\t\tWeights: {'header': {14}, 'nav': {14}, 'a': {14}, 'h4': {60}, 'h2': {139}}\n",
        "\tDocId: 7, Freq: 6\n",
        "\t\tPos: {325, 303, 337, 312, 281, 317}\n",
        "\t\tWeights: {'normal': {325, 303, 337, 312, 281, 317}}\n",
@@ -333,24 +333,24 @@
        "Token: team\n",
        "\tDocId: 1, Freq: 2\n",
        "\t\tPos: {254, 15}\n",
-       "\t\tWeights: {'nav': {15}, 'header': {15}, 'a': {15}, 'h2': {254}}\n",
+       "\t\tWeights: {'header': {15}, 'nav': {15}, 'a': {15}, 'h2': {254}}\n",
        "\tDocId: 2, Freq: 2\n",
        "\t\tPos: {254, 15}\n",
-       "\t\tWeights: {'nav': {15}, 'header': {15}, 'a': {15}, 'h2': {254}}\n",
+       "\t\tWeights: {'header': {15}, 'nav': {15}, 'a': {15}, 'h2': {254}}\n",
        "\tDocId: 3, Freq: 2\n",
        "\t\tPos: {254, 15}\n",
-       "\t\tWeights: {'nav': {15}, 'header': {15}, 'a': {15}, 'h2': {254}}\n",
+       "\t\tWeights: {'header': {15}, 'nav': {15}, 'a': {15}, 'h2': {254}}\n",
        "\n",
        "Token: contact\n",
        "\tDocId: 1, Freq: 1\n",
        "\t\tPos: {16}\n",
-       "\t\tWeights: {'nav': {16}, 'header': {16}, 'a': {16}}\n",
+       "\t\tWeights: {'header': {16}, 'nav': {16}, 'a': {16}}\n",
        "\tDocId: 2, Freq: 1\n",
        "\t\tPos: {16}\n",
-       "\t\tWeights: {'nav': {16}, 'header': {16}, 'a': {16}}\n",
+       "\t\tWeights: {'header': {16}, 'nav': {16}, 'a': {16}}\n",
        "\tDocId: 3, Freq: 1\n",
        "\t\tPos: {16}\n",
-       "\t\tWeights: {'nav': {16}, 'header': {16}, 'a': {16}}\n",
+       "\t\tWeights: {'header': {16}, 'nav': {16}, 'a': {16}}\n",
        "\tDocId: 7, Freq: 1\n",
        "\t\tPos: {35}\n",
        "\t\tWeights: {'normal': {35}}\n",
@@ -6826,7 +6826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -6843,33 +6843,13 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def df_from_dict(token:Token):\n",
-    "    df = pd.DataFrame.from_dict(token.getAllPos(), orient='index')\n",
-    "    df.fillna(0, inplace=True)\n",
-    "    df = df.astype('int32')\n",
-    "    return df.transpose()\n",
-    "\n",
-    "#Cite: https://stackoverflow.com/questions/47545052/convert-dataframe-rows-to-python-set\n",
-    "def dict_from_df(df) -> dict:\n",
-    "    df = df.transpose()\n",
-    "    series_set = df.apply(frozenset, axis=1)\n",
-    "    new_df = series_set.apply(lambda a: set(a))\n",
-    "    return dict(new_df)\n",
-    "\n",
-    "def join_df_col(df1,df2):\n",
-    "    df3 = df1.join(df2)\n",
-    "    df3.fillna(0, inplace=True)\n",
-    "    return df3.astype('int32')\n",
-    "\n",
     "df = df_from_dict(invIndex['artifici'])\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -6878,7 +6858,7 @@
        "{1: {1, 21, 46, 211, 384}, 2: {1, 21, 46, 211, 384}, 3: {1, 21, 46, 211, 384}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6889,7 +6869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6905,7 +6885,7 @@
        "{2: {21, 46, 211}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6929,7 +6909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -6950,7 +6930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -6970,7 +6950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -6985,7 +6965,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(join_df_col(df_from_dict(fTok),df_from_dict(fTok2)))"
+   ]
   }
  ],
  "metadata": {
