remove shelve demo

--- a/Dataframe_Demo.ipynb
+++ b/Dataframe_Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "            full_path = os.path.join(root, name)\n",
     "            jsonFiles.append(full_path)\n",
     "\n",
-    "jsonFiles = jsonFiles[:10]"
+    "jsonFiles = jsonFiles[:500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,26 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 https://aiclub.ics.uci.edu/\n",
-      "2 https://aiclub.ics.uci.edu/#body\n",
-      "3 https://aiclub.ics.uci.edu/index.html\n",
-      "4 http://alderis.ics.uci.edu/links.html\n",
-      "5 http://alderis.ics.uci.edu/publications.html\n",
-      "6 http://alderis.ics.uci.edu/\n",
-      "7 http://alderis.ics.uci.edu/dresystems.html\n",
-      "8 http://alderis.ics.uci.edu/amba2.html\n",
-      "9 http://alderis.ics.uci.edu/index.html\n",
-      "10 http://alderis.ics.uci.edu/downloads.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "invIndex = InvertedIndex() #Create inverted index to hold tokens from parser\n",
     "docId = 0\n",
@@ -76,733 +59,7 @@
     "    # Cleans and parses HTML content into tokens then adds it to Inverted index\n",
     "    tokenizeHtml(docId=docId, invIndex=invIndex, htmlContent=htmlContent)\n",
     "    print(docId, url)\n",
-    "# invIndex.write('HDF5',1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\formatters.py:707\u001b[0m, in \u001b[0;36mPlainTextFormatter.__call__\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    700\u001b[0m stream \u001b[39m=\u001b[39m StringIO()\n\u001b[0;32m    701\u001b[0m printer \u001b[39m=\u001b[39m pretty\u001b[39m.\u001b[39mRepresentationPrinter(stream, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mverbose,\n\u001b[0;32m    702\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_width, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnewline,\n\u001b[0;32m    703\u001b[0m     max_seq_length\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_seq_length,\n\u001b[0;32m    704\u001b[0m     singleton_pprinters\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msingleton_printers,\n\u001b[0;32m    705\u001b[0m     type_pprinters\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtype_printers,\n\u001b[0;32m    706\u001b[0m     deferred_pprinters\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdeferred_printers)\n\u001b[1;32m--> 707\u001b[0m printer\u001b[39m.\u001b[39;49mpretty(obj)\n\u001b[0;32m    708\u001b[0m printer\u001b[39m.\u001b[39mflush()\n\u001b[0;32m    709\u001b[0m \u001b[39mreturn\u001b[39;00m stream\u001b[39m.\u001b[39mgetvalue()\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\lib\\pretty.py:410\u001b[0m, in \u001b[0;36mRepresentationPrinter.pretty\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    407\u001b[0m                         \u001b[39mreturn\u001b[39;00m meth(obj, \u001b[39mself\u001b[39m, cycle)\n\u001b[0;32m    408\u001b[0m                 \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mobject\u001b[39m \\\n\u001b[0;32m    409\u001b[0m                         \u001b[39mand\u001b[39;00m callable(\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39m__repr__\u001b[39m\u001b[39m'\u001b[39m)):\n\u001b[1;32m--> 410\u001b[0m                     \u001b[39mreturn\u001b[39;00m _repr_pprint(obj, \u001b[39mself\u001b[39;49m, cycle)\n\u001b[0;32m    412\u001b[0m     \u001b[39mreturn\u001b[39;00m _default_pprint(obj, \u001b[39mself\u001b[39m, cycle)\n\u001b[0;32m    413\u001b[0m \u001b[39mfinally\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\lib\\pretty.py:778\u001b[0m, in \u001b[0;36m_repr_pprint\u001b[1;34m(obj, p, cycle)\u001b[0m\n\u001b[0;32m    776\u001b[0m \u001b[39m\"\"\"A pprint that just redirects to the normal repr function.\"\"\"\u001b[39;00m\n\u001b[0;32m    777\u001b[0m \u001b[39m# Find newlines and replace them with p.break_()\u001b[39;00m\n\u001b[1;32m--> 778\u001b[0m output \u001b[39m=\u001b[39m \u001b[39mrepr\u001b[39;49m(obj)\n\u001b[0;32m    779\u001b[0m lines \u001b[39m=\u001b[39m output\u001b[39m.\u001b[39msplitlines()\n\u001b[0;32m    780\u001b[0m \u001b[39mwith\u001b[39;00m p\u001b[39m.\u001b[39mgroup():\n",
-      "File \u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\HelperClass.py:81\u001b[0m, in \u001b[0;36mInvertedIndex.__repr__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__repr__\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mstr\u001b[39m:\n\u001b[0;32m     80\u001b[0m     rStr \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTotal Tokens: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgetTokenAmount()\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m---> 81\u001b[0m     \u001b[39mfor\u001b[39;00m token,_ \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_positions:\n\u001b[0;32m     82\u001b[0m         rStr \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mToken: \u001b[39m\u001b[39m{\u001b[39;00mtoken\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[0;32m     83\u001b[0m         \u001b[39mfor\u001b[39;00m docId,_ \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_positions[token]:\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
-    }
-   ],
-   "source": [
-    "invIndex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artifici\n",
-      "intellig\n",
-      "uci\n",
-      "shape\n",
-      "the\n",
-      "futur\n",
-      "of\n",
-      "ai\n",
-      "follow\n",
-      "us\n",
-      "home\n",
-      "about\n",
-      "event\n",
-      "team\n",
-      "contact\n",
-      "we\n",
-      "re\n",
-      "at\n",
-      "univers\n",
-      "california\n",
-      "irvin\n",
-      "is\n",
-      "a\n",
-      "nonprofit\n",
-      "student\n",
-      "run\n",
-      "organ\n",
-      "that\n",
-      "focus\n",
-      "on\n",
-      "promot\n",
-      "and\n",
-      "cultiv\n",
-      "disciplin\n",
-      "machin\n",
-      "learn\n",
-      "it\n",
-      "applic\n",
-      "among\n",
-      "commun\n",
-      "bi\n",
-      "weekli\n",
-      "hold\n",
-      "workshop\n",
-      "meet\n",
-      "for\n",
-      "curiou\n",
-      "one\n",
-      "to\n",
-      "latest\n",
-      "technolog\n",
-      "espcial\n",
-      "connect\n",
-      "from\n",
-      "profession\n",
-      "academia\n",
-      "almuni\n",
-      "industri\n",
-      "world\n",
-      "got\n",
-      "you\n",
-      "guy\n",
-      "through\n",
-      "our\n",
-      "uniqu\n",
-      "seminar\n",
-      "time\n",
-      "pscb\n",
-      "120\n",
-      "6pm\n",
-      "7pm\n",
-      "monday\n",
-      "onli\n",
-      "some\n",
-      "past\n",
-      "those\n",
-      "who\n",
-      "couldn\n",
-      "t\n",
-      "attend\n",
-      "due\n",
-      "space\n",
-      "constraint\n",
-      "don\n",
-      "worri\n",
-      "have\n",
-      "cover\n",
-      "catch\n",
-      "up\n",
-      "with\n",
-      "youtub\n",
-      "video\n",
-      "link\n",
-      "below\n",
-      "present\n",
-      "gener\n",
-      "fake\n",
-      "date\n",
-      "profil\n",
-      "stylegan\n",
-      "spam\n",
-      "classif\n",
-      "ic\n",
-      "day\n",
-      "style\n",
-      "transfer\n",
-      "natur\n",
-      "languag\n",
-      "process\n",
-      "hack\n",
-      "hackathon\n",
-      "comput\n",
-      "vision\n",
-      "opencv\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "q\n",
-      "session\n",
-      "data\n",
-      "analyt\n",
-      "pattern\n",
-      "pallet\n",
-      "town\n",
-      "pt\n",
-      "alexand\n",
-      "ihler\n",
-      "professor\n",
-      "advisor\n",
-      "here\n",
-      "are\n",
-      "area\n",
-      "he\n",
-      "ha\n",
-      "been\n",
-      "work\n",
-      "i\n",
-      "in\n",
-      "statist\n",
-      "method\n",
-      "approxim\n",
-      "infer\n",
-      "techniqu\n",
-      "graphic\n",
-      "model\n",
-      "my\n",
-      "includ\n",
-      "mine\n",
-      "inform\n",
-      "fusion\n",
-      "sensor\n",
-      "network\n",
-      "imag\n",
-      "biolog\n",
-      "ami\n",
-      "elsay\n",
-      "presid\n",
-      "jason\n",
-      "kahn\n",
-      "vice\n",
-      "pooja\n",
-      "kumar\n",
-      "secretari\n",
-      "uddeshya\n",
-      "treasur\n",
-      "madhumitha\n",
-      "govindaraju\n",
-      "corpor\n",
-      "chair\n",
-      "shivan\n",
-      "vipani\n",
-      "project\n",
-      "michael\n",
-      "wang\n",
-      "web\n",
-      "master\n",
-      "citizen\n",
-      "develop\n",
-      "maintain\n",
-      "updat\n",
-      "content\n",
-      "websit\n",
-      "over\n",
-      "year\n",
-      "kash\n",
-      "iz\n",
-      "market\n",
-      "omkar\n",
-      "pathak\n",
-      "lead\n",
-      "mentor\n",
-      "mathew\n",
-      "guerrero\n",
-      "historian\n",
-      "hero\n",
-      "elliot\n",
-      "alderson\n",
-      "like\n",
-      "hous\n",
-      "leav\n",
-      "zhang\n",
-      "andrew\n",
-      "laird\n",
-      "anthoni\n",
-      "luu\n",
-      "brett\n",
-      "galkowski\n",
-      "eduardo\n",
-      "corona\n",
-      "monish\n",
-      "ramadoss\n",
-      "satyam\n",
-      "tandon\n",
-      "get\n",
-      "touch\n",
-      "infom\n",
-      "6\n",
-      "email\n",
-      "aiatuci\n",
-      "gmail\n",
-      "com\n",
-      "thank\n",
-      "mailman\n",
-      "hi\n",
-      "way\n",
-      "sorri\n",
-      "know\n",
-      "what\n",
-      "happen\n",
-      "tri\n",
-      "later\n",
-      "design\n",
-      "by\n",
-      "themefish\n",
-      "copyright\n",
-      "all\n",
-      "right\n",
-      "reserv\n",
-      "alderi\n",
-      "analysi\n",
-      "distribut\n",
-      "embed\n",
-      "real\n",
-      "system\n",
-      "download\n",
-      "public\n",
-      "dre\n",
-      "amba\n",
-      "descript\n",
-      "can\n",
-      "find\n",
-      "pointer\n",
-      "relat\n",
-      "research\n",
-      "group\n",
-      "dream\n",
-      "ace\n",
-      "forg\n",
-      "host\n",
-      "center\n",
-      "under\n",
-      "supervis\n",
-      "nikil\n",
-      "dutt\n",
-      "also\n",
-      "collabor\n",
-      "middlewar\n",
-      "doc\n",
-      "isi\n",
-      "vanderbilt\n",
-      "be\n",
-      "analyz\n",
-      "use\n",
-      "open\n",
-      "sourc\n",
-      "tool\n",
-      "uppaal\n",
-      "checker\n",
-      "verimag\n",
-      "if\n",
-      "toolset\n",
-      "formal\n",
-      "verif\n",
-      "origin\n",
-      "creat\n",
-      "jaykay\n",
-      "materi\n",
-      "publish\n",
-      "thi\n",
-      "they\n",
-      "provid\n",
-      "person\n",
-      "may\n",
-      "not\n",
-      "do\n",
-      "own\n",
-      "paper\n",
-      "directli\n",
-      "journal\n",
-      "gabor\n",
-      "madl\n",
-      "sherif\n",
-      "abdelwah\n",
-      "dougla\n",
-      "c\n",
-      "schmidt\n",
-      "verifi\n",
-      "properti\n",
-      "via\n",
-      "graph\n",
-      "transform\n",
-      "check\n",
-      "special\n",
-      "issu\n",
-      "invit\n",
-      "25th\n",
-      "ieee\n",
-      "intern\n",
-      "symposium\n",
-      "volum\n",
-      "33\n",
-      "number\n",
-      "page\n",
-      "77\n",
-      "100\n",
-      "juli\n",
-      "2006\n",
-      "bibtex\n",
-      "confer\n",
-      "base\n",
-      "composit\n",
-      "proceed\n",
-      "emsoft\n",
-      "2005\n",
-      "karsai\n",
-      "automat\n",
-      "compon\n",
-      "corba\n",
-      "pp\n",
-      "231\n",
-      "240\n",
-      "lisbon\n",
-      "portug\n",
-      "decemb\n",
-      "2004\n",
-      "domain\n",
-      "specif\n",
-      "power\n",
-      "awar\n",
-      "6th\n",
-      "architectur\n",
-      "simul\n",
-      "samo\n",
-      "technic\n",
-      "report\n",
-      "tutori\n",
-      "perform\n",
-      "comparison\n",
-      "draft\n",
-      "v1\n",
-      "cec\n",
-      "preemptiv\n",
-      "schedul\n",
-      "poster\n",
-      "tivadar\n",
-      "szemethi\n",
-      "jano\n",
-      "sztipanovit\n",
-      "platform\n",
-      "itr\n",
-      "review\n",
-      "uc\n",
-      "berkeley\n",
-      "novemb\n",
-      "other\n",
-      "submiss\n",
-      "part\n",
-      "donald\n",
-      "bren\n",
-      "school\n",
-      "scienc\n",
-      "news\n",
-      "releas\n",
-      "sever\n",
-      "nusmv\n",
-      "digit\n",
-      "camera\n",
-      "mpsoc\n",
-      "click\n",
-      "see\n",
-      "result\n",
-      "were\n",
-      "sudeep\n",
-      "pasricha\n",
-      "qiang\n",
-      "zhu\n",
-      "lui\n",
-      "angel\n",
-      "d\n",
-      "bathen\n",
-      "evalu\n",
-      "chip\n",
-      "introduct\n",
-      "dsml\n",
-      "meta\n",
-      "specifi\n",
-      "common\n",
-      "semant\n",
-      "both\n",
-      "visual\n",
-      "textual\n",
-      "syntax\n",
-      "defin\n",
-      "avail\n",
-      "http\n",
-      "sourceforg\n",
-      "net\n",
-      "motiv\n",
-      "an\n",
-      "emerg\n",
-      "paradigm\n",
-      "hard\n",
-      "qo\n",
-      "support\n",
-      "refer\n",
-      "reusabl\n",
-      "piec\n",
-      "solut\n",
-      "which\n",
-      "configur\n",
-      "compos\n",
-      "togeth\n",
-      "servic\n",
-      "plan\n",
-      "shift\n",
-      "driven\n",
-      "mdd\n",
-      "as\n",
-      "shown\n",
-      "figur\n",
-      "gme\n",
-      "environ\n",
-      "show\n",
-      "correspond\n",
-      "concret\n",
-      "red\n",
-      "arrow\n",
-      "how\n",
-      "element\n",
-      "their\n",
-      "key\n",
-      "allow\n",
-      "automata\n",
-      "such\n",
-      "random\n",
-      "effici\n",
-      "bug\n",
-      "too\n",
-      "larg\n",
-      "state\n",
-      "explos\n",
-      "interest\n",
-      "feel\n",
-      "free\n",
-      "me\n",
-      "ani\n",
-      "question\n",
-      "or\n",
-      "comment\n",
-      "regard\n",
-      "propos\n",
-      "gabe\n",
-      "dot\n",
-      "edu\n",
-      "case\n",
-      "studi\n",
-      "theoret\n",
-      "background\n",
-      "behind\n",
-      "explain\n",
-      "more\n",
-      "detail\n",
-      "boe\n",
-      "bold\n",
-      "stroke\n",
-      "avion\n",
-      "exampl\n",
-      "section\n",
-      "illustr\n",
-      "built\n",
-      "upon\n",
-      "deploy\n",
-      "non\n",
-      "multiprocessor\n",
-      "five\n",
-      "timer\n",
-      "cpu\n",
-      "aspect\n",
-      "differ\n",
-      "processor\n",
-      "respect\n",
-      "howev\n",
-      "necessarili\n",
-      "execut\n",
-      "s\n",
-      "rate\n",
-      "seen\n",
-      "nav\n",
-      "display\n",
-      "often\n",
-      "serv\n",
-      "remot\n",
-      "request\n",
-      "than\n",
-      "local\n",
-      "consit\n",
-      "11\n",
-      "task\n",
-      "channel\n",
-      "5\n",
-      "buffer\n",
-      "explicitli\n",
-      "when\n",
-      "measur\n",
-      "delay\n",
-      "satisfi\n",
-      "abov\n",
-      "condit\n",
-      "except\n",
-      "abstract\n",
-      "out\n",
-      "polici\n",
-      "repres\n",
-      "sinc\n",
-      "complex\n",
-      "accord\n",
-      "safe\n",
-      "ensur\n",
-      "correct\n",
-      "guard\n",
-      "assign\n",
-      "ahb\n",
-      "finit\n",
-      "list\n",
-      "ambigu\n",
-      "cite\n",
-      "left\n",
-      "describ\n",
-      "final\n",
-      "version\n",
-      "claim\n",
-      "protocol\n",
-      "incorrect\n",
-      "nor\n",
-      "contain\n",
-      "irresolv\n",
-      "contradict\n",
-      "doe\n",
-      "mention\n",
-      "problem\n",
-      "therefor\n",
-      "resolv\n",
-      "these\n",
-      "implement\n",
-      "each\n",
-      "even\n",
-      "though\n",
-      "need\n",
-      "simpl\n",
-      "rather\n",
-      "reli\n",
-      "themselv\n",
-      "enforc\n",
-      "could\n",
-      "easili\n",
-      "overcom\n",
-      "prone\n",
-      "function\n",
-      "demonstr\n",
-      "simultan\n",
-      "hresp\n",
-      "retri\n",
-      "respons\n",
-      "hsplitx\n",
-      "unmask\n",
-      "same\n",
-      "clock\n",
-      "cycl\n",
-      "slave\n",
-      "deadlock\n",
-      "situat\n",
-      "two\n",
-      "smv\n",
-      "output\n",
-      "disallow\n",
-      "avoid\n",
-      "three\n",
-      "well\n",
-      "chang\n",
-      "better\n",
-      "scalabl\n",
-      "still\n",
-      "dedic\n",
-      "wire\n",
-      "variabl\n",
-      "64x64\n",
-      "pixel\n",
-      "tile\n",
-      "jpeg\n",
-      "2000\n",
-      "compress\n",
-      "128x128\n",
-      "feedback\n",
-      "your\n",
-      "further\n",
-      "framework\n",
-      "pleas\n",
-      "recent\n",
-      "0\n",
-      "zip\n",
-      "small\n",
-      "scale\n",
-      "tini\n",
-      "helicopt\n",
-      "autopilot\n",
-      "visit\n",
-      "www\n"
-     ]
-    }
-   ],
-   "source": [
-    "for docId in invIndex.getAllPos()['artifici']:\n",
-    "    print(token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "print(invIndex.getAllPos())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(invIndex.getAllFields()['artifici'][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# invIndex['field']['artifici']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pandas as pd\n",
-    "# dfP = pd.read_hdf('HDF5/Index.hdf5', 'pos1', mode='r')\n",
-    "# dfW = pd.read_hdf('HDF5/Index.hdf5', 'field1', mode='r')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dfP['artifici'][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dfW['artifici'][1]"
+    "invIndex.write('HDF5',1)"
    ]
   }
  ],
