store 5k index to shelve

--- a/Dataframe_Demo.ipynb
+++ b/Dataframe_Demo.ipynb
@@ -15,7 +15,7 @@
     "            full_path = os.path.join(root, name)\n",
     "            jsonFiles.append(full_path)\n",
     "\n",
-    "jsonFiles = jsonFiles[:500]"
+    "jsonFiles = jsonFiles[:5000]"
    ]
   },
   {
@@ -58,8 +58,28 @@
     "    url, htmlContent = getJsonData(jFile)\n",
     "    # Cleans and parses HTML content into tokens then adds it to Inverted index\n",
     "    tokenizeHtml(docId=docId, invIndex=invIndex, htmlContent=htmlContent)\n",
-    "    print(docId, url)\n",
-    "invIndex.write('HDF5',1)"
+    "    print(docId, url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shelve\n",
+    "def storeIndexPos(invIndex, count):\n",
+    "    with shelve.open('Shelve/index', 'c') as shelf:\n",
+    "        shelf[f'index{count}'] = invIndex.getAllPos()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storeIndexPos(invIndex,1)"
    ]
   }
  ],
