--- a/Dataframe_Demo.ipynb
+++ b/Dataframe_Demo.ipynb
@@ -67,19 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shelve\n",
-    "def storeIndexPos(invIndex, count):\n",
-    "    with shelve.open('Shelve/index', 'c') as shelf:\n",
-    "        shelf[f'index{count}'] = invIndex.getAllPos()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "storeIndexPos(invIndex,1)"
+    "invIndex.write('HDF5')"
    ]
   }
  ],
