--- a/Query_DemoFile.ipynb
+++ b/Query_DemoFile.ipynb
@@ -85,7 +85,7 @@
     "        with shelve.open(f'Shelve/docId', 'c') as shelf:\n",
     "            print(shelf[str(docId)])\n",
     "            count += 1\n",
-    "        if count > limit: return\n",
+    "        if count >= limit: return\n",
     "\n",
     "N = 16258\n",
     "query = 'cristina lopes'\n",
