--- a/Query_DemoFile.ipynb
+++ b/Query_DemoFile.ipynb
@@ -91,7 +91,7 @@
     "query = 'cristina lopes'\n",
     "stemList = stemQuery(query)\n",
     "invIndex = InvertedIndex()\n",
-    "invIndex.load(stemList)\n",
+    "invIndex.load(stemList,count=6)\n",
     "qDict = getDfDict(stemList,invIndex)\n",
     "tfIdfDict = getTfIdfDict(qDict, invIndex, N)\n",
     "getTopResults(tfIdfDict,5)"
