update query demo to take in all docs

--- a/Query_DemoFile.ipynb
+++ b/Query_DemoFile.ipynb
@@ -14,14 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://chenli.ics.uci.edu/publications/\n"
+      "https://www.ics.uci.edu/~hsajnani/\n",
+      "https://www.ics.uci.edu/~sjavanma/\n",
+      "http://mondego.ics.uci.edu/\n",
+      "https://www.informatics.uci.edu/explore/facts-figures/\n",
+      "https://www.informatics.uci.edu/explore/facts-figures/#content\n"
      ]
     }
    ],
@@ -82,19 +86,43 @@
     "def getTopResults(idDict, limit):\n",
     "    count = 0\n",
     "    for docId in idDict:\n",
-    "        with shelve.open(f'Shelve/docId', 'c') as shelf:\n",
+    "        with shelve.open(f'DevShelve/Url', 'c') as shelf:\n",
     "            print(shelf[str(docId)])\n",
     "            count += 1\n",
     "        if count >= limit: return\n",
     "\n",
-    "N = 16258\n",
+    "N = 55383\n",
     "query = 'cristina lopes'\n",
     "stemList = stemQuery(query)\n",
     "invIndex = InvertedIndex()\n",
-    "invIndex.load(stemList,count=6)\n",
+    "invIndex.load(stemList,count=10, filePath='DevShelve') #10 partial indexes in shelve file\n",
     "qDict = getDfDict(stemList,invIndex)\n",
     "tfIdfDict = getTfIdfDict(qDict, invIndex, N)\n",
     "getTopResults(tfIdfDict,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import shelve\n",
+    "# def getDocNum():\n",
+    "#     tempShelve = None\n",
+    "#     with shelve.open(f'DevShelve/Index', 'c') as shelf:\n",
+    "#         tempShelve = shelf['index2']\n",
+    "#     return tempShelve\n",
+    "\n",
+    "# getDocNum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['index1', 'index2', 'index3', 'index4', 'index5', 'index6', 'index7', 'index8', 'index9', 'index10']"
    ]
   }
  ],
