--- a/Query_DemoFile.ipynb
+++ b/Query_DemoFile.ipynb
@@ -103,18 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['index1', 'weight1', 'index2', 'weight2', 'index3', 'weight3', 'index4', 'weight4', 'index5', 'weight5', 'index6', 'weight6', 'index7', 'weight7', 'index8', 'weight8', 'index9', 'weight9', 'index10', 'weight10']\n"
+     ]
+    }
+   ],
    "source": [
-    "# import shelve\n",
-    "# def getDocNum():\n",
-    "#     tempShelve = None\n",
-    "#     with shelve.open(f'DevShelve/Index', 'c') as shelf:\n",
-    "#         tempShelve = shelf['index2']\n",
-    "#     return tempShelve\n",
+    "import shelve\n",
+    "def getDocNum():\n",
+    "    with shelve.open(f'DevShelve/Index', 'c') as shelf:\n",
+    "        print(list(shelf.keys()))\n",
     "\n",
-    "# getDocNum()"
+    "getDocNum()"
    ]
   },
   {
