create DocId.hdf5 to store url and doclen

--- a/Query_DemoFile.ipynb
+++ b/Query_DemoFile.ipynb
@@ -16,19 +16,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.ics.uci.edu/~hsajnani/\n",
-      "https://www.ics.uci.edu/~sjavanma/\n",
-      "http://mondego.ics.uci.edu/\n",
-      "https://www.informatics.uci.edu/explore/facts-figures/\n",
-      "https://www.informatics.uci.edu/explore/facts-figures/#content\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from HelperClass import InvertedIndex\n",
     "from nltk.stem import PorterStemmer\n",
@@ -98,12 +86,12 @@
     "invIndex.load(stemList,count=10, filePath='DevShelve') #10 partial indexes in shelve file\n",
     "qDict = getDfDict(stemList,invIndex)\n",
     "tfIdfDict = getTfIdfDict(qDict, invIndex, N)\n",
-    "getTopResults(tfIdfDict,5)"
+    "# getTopResults(tfIdfDict,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
