comment out writing to docid hdf5 file

--- a/ParseDocId.ipynb
+++ b/ParseDocId.ipynb
@@ -326,8 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfLen.to_hdf(f'DevHDF5/DocId.hdf5', key='docLen')\n",
-    "dfUrl.to_hdf(f'DevHDF5/DocId.hdf5', key='url')"
+    "# dfLen.to_hdf(f'DevHDF5/DocId.hdf5', key='docLen')\n",
+    "# dfUrl.to_hdf(f'DevHDF5/DocId.hdf5', key='url')"
    ]
   }
  ],
