read docIdf hdf5 for query

--- a/ParseDocId.ipynb
+++ b/ParseDocId.ipynb
@@ -329,6 +329,35 @@
     "# dfLen.to_hdf(f'DevHDF5/DocId.hdf5', key='docLen')\n",
     "# dfUrl.to_hdf(f'DevHDF5/DocId.hdf5', key='url')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfLenRead = pd.read_hdf('DevHDF5/DocId.hdf5', 'docLen')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1049"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfLenRead[11][0]"
+   ]
   }
  ],
  "metadata": {
