--- a/Query_DemoFile.ipynb
+++ b/Query_DemoFile.ipynb
@@ -14,13 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.ics.uci.edu/~hsajnani/\n",
+      "https://www.ics.uci.edu/~sjavanma/\n",
+      "http://mondego.ics.uci.edu/\n",
+      "https://www.informatics.uci.edu/explore/facts-figures/\n",
+      "https://www.informatics.uci.edu/explore/facts-figures/#content\n"
+     ]
+    }
+   ],
    "source": [
     "from HelperClass import InvertedIndex\n",
     "from nltk.stem import PorterStemmer\n",
     "from collections import defaultdict\n",
+    "import pandas as pd\n",
     "import math\n",
     "import re\n",
     "import shelve\n",
@@ -71,13 +84,16 @@
     "    #Sort based on tfIdf\n",
     "    return {k: v for k, v in sorted(tfIdfDict.items(), key=lambda item: item[1], reverse=True)}\n",
     "\n",
-    "def getTopResults(idDict, limit):\n",
+    "def getTopResults(idDict, limit) -> list:\n",
+    "    results = []\n",
     "    count = 0\n",
+    "    dfUrl = pd.read_hdf('DevHDF5/DocId.hdf5', 'url')\n",
     "    for docId in idDict:\n",
-    "        with shelve.open(f'DevShelve/Url', 'c') as shelf:\n",
-    "            print(shelf[str(docId)])\n",
-    "            count += 1\n",
-    "        if count >= limit: return\n",
+    "        results.append(dfUrl[docId][0])\n",
+    "        count += 1\n",
+    "        if count >= limit: \n",
+    "            return results\n",
+    "    return results\n",
     "\n",
     "N = 55383\n",
     "query = 'cristina lopes'\n",
@@ -86,7 +102,8 @@
     "invIndex.load(stemList,count=10, filePath='DevShelve') #10 partial indexes in shelve file\n",
     "qDict = getDfDict(stemList,invIndex)\n",
     "tfIdfDict = getTfIdfDict(qDict, invIndex, N)\n",
-    "# getTopResults(tfIdfDict,5)"
+    "for url in getTopResults(tfIdfDict,5):\n",
+    "    print(url)"
    ]
   },
   {
@@ -109,14 +126,6 @@
     "        print(list(shelf.keys()))\n",
     "\n",
     "getDocNum()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "['index1', 'index2', 'index3', 'index4', 'index5', 'index6', 'index7', 'index8', 'index9', 'index10']"
    ]
   }
  ],
