--- a/ParseDocId.ipynb
+++ b/ParseDocId.ipynb
@@ -85,18 +85,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "dfLenRead = pd.read_hdf('DevHDF5/DocId.hdf5', 'docLen')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1049"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dfLenRead[11][0]"
    ]
